<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/txtOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_received_otp_below"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="@font/bangers"
        android:textAlignment="center"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/edtResetPasswordOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOtp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:maxLength="4"
        android:hint="@string/enter_your_otp"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="phone"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtResetPasswordNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtResetPasswordOtp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/new_password_min_6_characters"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtResetPasswordConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtResetPasswordNewPassword"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/confirm_password"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtResetPasswordConfirmPassword"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>