<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <EditText
        android:id="@+id/edtRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerToolbar"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/name_min_3_characters"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegisterName"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_address"
        android:padding="12dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_drawable"/>

    <EditText
        android:id="@+id/edtRegisterMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegisterEmail"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:padding="12dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_phone"
        android:background="@drawable/input_drawable"/>

    <EditText
        android:id="@+id/edtRegisterDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegisterMobileNumber"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/delivery_address"
        android:padding="12dp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_location"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegisterDeliveryAddress"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_min_6_characters"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRegisterPassword"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtConfirmPassword"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>