<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFF5F5 "
    tools:context=".fragment.FAQsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/textViewFAQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/question1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textViewFAQA2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/answer1"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/textViewFAQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/question2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textViewFAQA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/answer2"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/textViewFAQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/question3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textViewFAQA3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/answer3"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/textViewFAQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/question4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textViewFAQA4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/answer4"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
                <TextView
                    android:id="@+id/textViewFAQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:text="@string/question5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textViewFAQA5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:text="@string/answer5"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

