<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLoginScreen"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/textContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOG IN TO CONTINUE"
        android:layout_below="@id/imgLoginScreen"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-60dp"
        android:fontFamily="@font/bangers"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtLoginMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textContinue"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:hint="@string/mobile_number_10_digits"
        android:padding="12dp"
        android:inputType="phone"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_phone"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtLoginMobileNumber"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/txtForgetPasswordPageLink"
        android:layout_below="@+id/edtLoginPassword"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgetPasswordPageLink"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSignUpPageLink"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_now"/>

    <View
        android:layout_width="258dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:layout_height="1dp"
        android:background="@android:color/black"/>


</RelativeLayout>