<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/imgForgetScreen"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_below="@+id/imgForgetScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@android:color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-70dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/edtForgetMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgetPassword"
        android:drawableStart="@drawable/ic_phone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="phone"
        android:maxLength="10"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/edtForgetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtForgetMobileNumber"
        android:layout_margin="10dp"
        android:hint="@string/email_address"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_drawable"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtForgetEmail"
        android:text="Next"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10dp"
        android:padding="12dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>